test/e2e/app-dir/errors/app/server-actions/action.js
'use server'

export async function serverAction() {
  throw new Error('server action test error')
}
